static/css/video.css
/* Code by Sergio00166 */

/* Just to add a border to the subtitles */
video::cue {
    background: none !important;
    line-height: 1.1 !important;
    text-shadow: 0.07em 0.07em 0.05em black, -0.07em 0.07em 0.05em black,
        0.07em -0.07em 0.05em black, -0.07em -0.07em 0.05em black,
        0.07em 0 0.05em black, -0.07em 0 0.05em black, 0 0.07em 0.05em black,
        0 -0.07em 0.05em black !important;
}
/* Dont cut the bottom of the bottom subtitles */
video::-webkit-media-text-track-display {
    padding: 0.25em !important;
}
/* Dont fucking show native video controls */
video::-webkit-media-controls { display: none !important; }
video::-moz-media-controls    { display: none !important; }

.video-box { position: relative; }
canvas { position: absolute; }

.video-container {
    position: relative;
    width: 90vw;
    height: 90vh;
    height: 90dvh;
    color: #fff;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}
#touch-box {
    position: absolute;
    z-index: 9;
    width: 100%;
    height: 100%;
}
img {
    pointer-events: none;
    width: 20px;
    height: 20px;
    display: inline-block;
    vertical-align: middle;
    filter: brightness(0) invert(1);
}
.fullimg {
    width: 67%;
    height: 67%;
}
.round-button {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    color: #fafafa;
    background: linear-gradient(145deg, #363a43, #000e0f);
    border: 2px solid black;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    position: relative;
    margin-right: 8px;
    cursor: pointer;
}
.round-button:hover {
    background: linear-gradient(120deg, #8f9faf, #3f4f5f);
}
.lmbsl {
    background: linear-gradient(120deg, #6f7f10, #3f4f0a);
}
.lmbsl:hover {
    background: linear-gradient(120deg, #9f9f10, #afaf00);
}
body {
    margin: 0;
    font-family: sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    height: 100dvh;
    background: #000000;
    -webkit-tap-highlight-color: transparent;
    -webkit-user-select: none;
    user-select: none;
}

.custom-loader {
    width: 108px;
    height: 108px;
    opacity: 0;
    border: 10px solid #FFF;
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    box-sizing: border-box;
    animation: rotation 1s linear infinite;
    position: absolute;
    transition: all 0.5s;
}
@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
} 

.main-state {
    opacity: 0;
    height: 80px;
    width: 80px;
    position: absolute; 
    cursor: pointer;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: rgba(48,48,56,0.75);
    border: 1px solid #222;
}
.animate-state {
    animation: animation 0.6s forwards;
}
.controls {
    bottom: 0;
    opacity: 0;
    width: 100%;
    z-index: 99;
    position: absolute;
    transition: all 0.3s;
    box-sizing: border-box;
    padding: 0.5rem 1rem 0.5rem 1rem;
    background: linear-gradient(to top, #000000b8 -100%, transparent);
}
.controls.show {
    opacity: 1 !important;
}
.duration {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    width: calc((100% - 64px));
    height: 10px;
    background: #62626274;
    cursor: pointer;
    border-radius: 4px;
}
/* This weird shit is only to let the */
/* user select easily the start and end */
/* and also try to fix one bug */
.duration::before {
    position: absolute;
    content: "\00a0";
    height: 100%;
    left: -48px;
    width: calc((100% + 98px));
    height: 150%;
    top: -25%;
}
.chapter-container {
    position: relative;
    height: 100%;
    border-radius: 4px;
    overflow: hidden;
}
.chapter {
    position: absolute;
    height: 100%;
    width: 2px;
    margin-left: -1px;
    z-index: 999;
    background-color: #000;
}
.duration .buffer {
    height: 100%;
    position: absolute;
    background-color: #ff6a0045;
    width: 0;
}
.hover-time {
    overflow: show;
    height: 100%;
    position: absolute;
    inset: 0;
    background: #ffffff9a;
    display: flex;
    align-items: center;
    width: 0;
    border-radius: 5px;
    z-index: -1;
}
.hover-time .hover-duration {
    position: absolute;
    background: #202020f0;
    padding: 0.2rem;
    border-radius: 5px;
    font-size: 0.8rem;
    visibility: hidden;
    font-weight: bold;
    text-align: center;
    pointer-events: none;
}
.duration .current-time {
    inset: 0;
    width: 0;
    height: 100%;
    display: flex;
    position: absolute;
    background: #ff4a10;
    align-items: center;
    border-radius: 5px;
}
.current-time::before {
    opacity: 0;
    content: "";
    width: 13px;
    height: 14px;
    position: absolute;
    right: calc((-13px / 2));
    background: #ff6a00;
    border-radius: 50%;
    z-index: 999;
    transition: all 0.2s;
    transform: scale(0);
}
.duration:hover .current-time::before {
    opacity: 1;
    transform: scale(1);
}
.btn-controls {
    padding-top: 1rem;
    font-size: 1.2rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.time-container {
    font-size: 13px;
    font-weight: 500;
    padding-right: 8px;
}
.volume {
    display: flex;
    align-items: center;
}
.mute-unmute {
    display: flex;
    cursor: pointer;
}
#volume-bar {
    height: 3px;
    outline: none;
    cursor: pointer;
    appearance: none;
    border-radius: 2px;
    visibility: hidden;
    width: 0 !important;
    background: #e1e1e1;
    transition: all 0.1s;
    -webkit-appearance: none;
}
#volume-bar::-webkit-slider-thumb {
    width: 10px;
    height: 10px;
    appearance: none;
    border-radius: 50%;
    background: #007aff;
    -webkit-appearance: none;
}
#volume-bar::-moz-range-thumb {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background: #007aff;
}
#volume-bar.show {
    width: 48px !important;
    visibility: visible;
    transform: scaleX(1);
    margin-right: 16px;
}
.setting-menu {
    opacity: 0;
    border: 2px solid black;
    visibility: hidden;
    list-style: none;
    padding-inline-start: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    position: absolute;
    bottom: 84px;
    transition: all 0.2s;
    background: rgba(40,40,40,0.9);
    transform: scaleY(0);
    transform-origin: bottom;
    border-radius: 12px;
    margin-left: -50px;
}
.setting-menu.show {
    opacity: 1;
    transform: scaleY(1);
    visibility: visible;
}
.setting-menu li {
    padding: 0.33rem 0.5rem;
    margin: 0.25rem;
    transition: all 0.2s;
    border-radius: 8px;
    font-size: 1rem;
    font-weight: 500;
    cursor: pointer;
}
.setting-menu li:hover {
    background: #666 !important;
}
.setting-menu li:nth-child(1)::before {
    content: "Subs";
    color: #ffffff;
    position: absolute;
}
.setting-menu li:nth-child(2)::before {
    content: "Tracks";
    color: #ffffff;
    position: absolute;
}
.setting-menu li:nth-child(3)::before {
    content: "Speed";
    color: #ffffff;
    position: absolute;
}
select {
    cursor: pointer;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: none;
    appearance: none;
    width: 100%;
    text-align: center;
    font-size: 1rem;
    font-weight: 500;
    width: 64px;
    opacity: 0;
    border: none;
}
select option {
    background-color: rgba(40,40,40,0.9);
    color: #eee;
}
.speed-active {
    background: rgb(64, 64, 64);
}
.setting-menu li:hover {
    background: rgb(36, 36, 36);
}
.setting-btn {
    display: flex;
}
.fullscreen {
    position: absolute !important;
    max-width: 100% !important;
    width: 100% !important;
    height: 100% !important;
    display: flex !important;
    background: #000 !important;
    align-items: center !important;
}
.side-controls {
    display: flex;
    align-items: center;
}
.full,.contract {
    display: none;
}
.video-container:not(.fullscreen) .full {
    display: flex;
}
.video-container.fullscreen .contract {
    display: flex;
}
@keyframes animation {
    50% {
        opacity: 1;
        transform: scale(1.1);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

/* Define default values */
.sh_mute { display: none; }
.sh_unmute { display: none; }
.sh_pause { display: none; }
.sh_play { display: none; }
.sh_play_st { display: none; }
.sh_pause_st { display: none; }
.sh_mute_st { display: none; }
.sh_unmute_st { display: none; }
.sh_fordward_st { display: none; }
.sh_back_st { display: none; }
.sh_fulla { display: none; }
.sh_meda { display: none; }
.sh_lowa { display: none; }
.sh_noa { display: none; }
button:focus { outline: none; }
.transition { transition: opacity 0.25s ease; }


/* RESPONSIVE (pain) ZONE */

@media (max-width: 900px) {
    .main-state {
        height: 67px;
        width: 67px;
    }
    .custom-loader {
        height: 90px;
        width: 90px;
        border: 8px solid #FFF;
        border-bottom-color: transparent;
    }
}
@media (max-width: 500px) {
    .play-pause {
        display: none;
    }
}
@media (max-width: 450px) {
    .time-container {
        margin-bottom: 6px;
    }
    .volume {
        display: none;
    }
    .btn-controls {
        padding-top: 0.67rem;
        font-size: 1.2rem;
        display: flex;
        align-items: center;
        flex-direction: column;
    }
}
@media (max-width: 320px) {
    .duration {
        width: 90%;
    }
}
@media (max-width: 280px) {
    #mode {
        display: none;
    }
    .main-state {
        height: 50px;
        width: 50px;
    }
    .custom-loader {
        height: 70px;
        width: 70px;
        border: 7px solid #FFF;
        border-bottom-color: transparent;
    }
}
@media (max-width: 220px) {
    .settings {
        display: none;
    }
}
@media (max-height: 320px) {
    .btn-controls {
        display: none;
    }
    .video-box, .main-state, .custom-loader {
        margin-bottom: 8px !important;
    }
}
@media (max-aspect-ratio: 1/1) {
    .video-box, .main-state, .custom-loader {
        margin-bottom: 30px;
    }
}
@media (min-aspect-ratio: 1/1) and (max-height: 320px) {
    .hover-time .hover-duration {
        font-size: 0.5rem;
    }
}
@media ((max-width: 160px) or (max-height: 160px)) {
    .video-container {
        display: none;
    }
}

